objects/Distribui_o_de_Valores__c.object
<CustomObject>
    <description>Onda 02 - Integração de contratos KA</description>
    <fields>
        <fullName>Ano_Fiscal_para_Apuracao__c</fullName>
        <label>oldAno Fiscal para Apuração</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                    <default>true</default>
                    <label>2012</label>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ano_de_Referencia_para_Apuracao__c</fullName>
        <label>Ano de Referencia para Apuração</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ano_fiscal_formula__c</fullName>
        <formula>IF (MONTH(Data_de_Referencia_para_Apuracao__c)&gt;6,  YEAR(Data_de_Referencia_para_Apuracao__c) +1,
YEAR(Data_de_Referencia_para_Apuracao__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ano Fiscal para Apuração</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clausulas_do_Contrato__c</fullName>
        <label>Cláusulas do Contrato</label>
        <referenceTo>Cl_usulas_do_Contrato__c</referenceTo>
        <relationshipLabel>Distribuição de Valores</relationshipLabel>
        <relationshipName>Distribui_o_de_Valores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_de_Referencia_para_Apuracao__c</fullName>
        <inlineHelpText>Será considerado apenas o Mês e o Ano.
O Ano fiscal será considerado de 01/07  a 30/06 .
A data deve ficar entre o inicio e o Término do contrato.</inlineHelpText>
        <label>Data de Referencia para Apuração</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_inicio_do_contrato__c</fullName>
        <formula>Clausulas_do_Contrato__r.Contrato__r.StartDate__c</formula>
        <label>Data inicio do contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_termino_do_contrato__c</fullName>
        <formula>Clausulas_do_Contrato__r.Contrato__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data termino do contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mes_de_Referencia_para_Apuracao__c</fullName>
        <label>Mês de Referencia para Apuração</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_da_Parcela_R__c</fullName>
        <label>Valor da Parcela (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Distribuição de Valores</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Distribuição de Valores</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribuição de Valores</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>data_da_distribuicao_de_valores_dentro</fullName>
        <active>true</active>
        <description>data de distribuição de valores está dentro do intervalo de contratos.</description>
        <errorConditionFormula>OR(

AND( ISBLANK( Clausulas_do_Contrato__r.Contrato__r.ProvisionarAte__c ) &amp;&amp; (Data_de_Referencia_para_Apuracao__c &gt; Data_termino_do_contrato__c ||
Data_de_Referencia_para_Apuracao__c &lt; Data_inicio_do_contrato__c )),

AND( NOT(ISBLANK(Clausulas_do_Contrato__r.Contrato__r.ProvisionarAte__c )) &amp;&amp; (Data_de_Referencia_para_Apuracao__c &gt; Clausulas_do_Contrato__r.Contrato__r.ProvisionarAte__c ||
Data_de_Referencia_para_Apuracao__c &lt; Data_inicio_do_contrato__c ))

)</errorConditionFormula>
        <errorDisplayField>Data_de_Referencia_para_Apuracao__c</errorDisplayField>
        <errorMessage>A data de referencia para apuração deve ser maior que a data de ínicio, menor que a data término e que a data provisionar até.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nao_ter_registro_se_for_percentual</fullName>
        <active>true</active>
        <description>O objeto de distribuição não pode ter nenhum registro se for percentual</description>
        <errorConditionFormula>(NOT ISBLANK(Clausulas_do_Contrato__r.Percentual__c))   &amp;&amp; 
 (NOT ISBLANK(Data_de_Referencia_para_Apuracao__c ))</errorConditionFormula>
        <errorMessage>Quando a Cláusula é Percentual não pode ter distribuição de valores</errorMessage>
    </validationRules>
</CustomObject>